<resources>
    <string name="app_name">High-Discount</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="settings">Settings</string>
    <string name="new_on_jumia">New User?</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="login">LOGIN</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="or">OR</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="home">HOME</string>
    <string name="saved">SAVED</string>
    <string name="cart">CART</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="create">CREATE</string>
    <string name="shops_of_the_week">SHOPS OF THE WEEK</string>
    <string name="feature_store">FEATURE STORE</string>
    <string name="best_selling_products">BEST SELLING PRODUCTS</string>

    <string-array name="users_types">
        <item>Please Select User Type</item>
        <item>User</item>
        <item>Vendor</item>
    </string-array>

    <string-array name="country_calling">
        <item>+20</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="verification">verification</string>
    <string name="specification">Specification</string>

    <string name="facebook_app_id" translatable="false">2140120516245679</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2140120516245679</string>
    <string name="account_settings_label">Account Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="my_addresses">My Addresses</string>
    <string name="my_ratings">My Ratings</string>
    <string name="notification_settings">Notificatio Settings</string>
    <string name="push_notification">Push Notification</string>
    <string name="newsletter">Newsletter</string>
    <string name="shop_settings">Shop Settings</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="egypt">Egypt</string>
    <string name="more">More</string>
    <string name="app_version">App Version</string>
    <string name="version_number">4.7.1</string>
    <string name="up_to_date">Up to date</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="share_and_rate_this_app">Share And Rate This App</string>
    <string name="tell_others_about_this_app">Tell Others About This App</string>
    <string name="my_account">My Account</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="recent_viewed">Recent Viewed</string>
    <string name="my_orders">My Orders</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="emptyEditText">Empty Value Not Allowed</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="error_happened">Error Happened</string>
    <string name="save_login">Save Login</string>
    <string name="logging">Logging</string>
    <string name="siging_up_msg">Signing Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_type">Type</string>
    <string name="password_confirmation_error">Password Not Matched</string>
    <string name="select_user_type">Please Select User Type</string>
    <string name="password_error">Password Error</string>
    <string name="our_category">Our Category</string>
    <string name="laptops_computers">Laptop And Computers</string>
    <string name="brands">Brands</string>
    <string name="top_brands">Top Brands</string>
    <string name="top_products">Top Products</string>
    <string name="on_sale">On Sale</string>
    <string name="top_rated">Top Rated</string>
    <string name="price_label"> LE</string>
    <string name="top_category">Top Category</string>
    <string name="currency"> LE</string>
    <string name="price_with_currency">%s LE</string>
    <string name="stock_text">%d Item In Stock</string>
    <string name="your_personal_data">your personal data</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="choose_language">Choose App Language</string>
    <string name="most_liked">Most Liked</string>
    <string name="recommended_products">Recommended Products</string>
    <string name="done_correct">Done </string>
    <string name="error_happend">Error happened</string>
    <string name="retry">Retry</string>
    <string name="add_to_wishlist">ADD TO WISHLIST</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="sizes">Sizes</string>
    <string name="colors">Colors</string>
    <string name="description">Description</string>
    <string name="no_result">No result</string>
    <string name="try_input_more_general_keyword">Try input more general keyword</string>
    <string name="check_out">Check Out</string>
    <string name="no_network_connection">No Internet Connection</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="no_data_available">No Data Available</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="total_weight">TOTAL WEIGHT</string>
    <string name="kg">KG</string>
    <string name="submit_order">Submit Order</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="shipping">Shipping</string>
    <string name="no_connection">No connection</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="order_details">Order Details</string>
    <string name="payment">Payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="order_status">ORDER STATUS</string>
    <string name="items_in_your_order">ITEMS IN YOUR ORDER</string>
    <string name="order_no">order no.</string>
    <string name="item_string">Item</string>
    <string name="logging_out">Logging Out</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="try_again">Error Try Again Later</string>
    <string name="login_frist">You Must Login First</string>
    <string name="deleting_product">Deleting Product</string>
    <string name="error_loading_data">Error Loading Data \n Tap To Retry</string>
    <string name="order_done">Order Placed</string>
    <string name="oops">Oops</string>
    <string name="account_created">Account Created</string>
    <string name="you_are_in">You Are In</string>
    <string name="you_are_out">Logged Out</string>
    <string name="item_removed">Product Removed</string>
    <string name="login_successfully">Login successfully</string>
    <string name="email_not_correct">Email not correct</string>
    <string name="password_not_correct">Password not correct</string>
    <string name="user_not_correct">Username not correct</string>
    <string name="looged_out">you are logged out</string>
    <string name="item_added">Item Added successfully</string>
    <string name="error_deleting">Error Deleting Item</string>
    <string name="error_adding">Error Adding Item</string>
    <string name="order_placed_successfully">Order Placed successfully</string>
    <string name="error_palcing_order">Error Placing Order</string>
    <string name="adding_to_cart">Adding Product To Cart</string>

</resources>
