<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/back_ground"
                android:fontFamily="@font/aclonica"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@string/account_settings_label" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/my_profile_text"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@string/my_profile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />



            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />



            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />



            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />




            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />



            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/dividerColor"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@string/shop_settings" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />

          

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language" />

                <TextView
                    android:id="@+id/current_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/dividerColor"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@string/more" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/app_version" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version_number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_to_date" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@string/terms_and_conditions" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/dividerColor"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@string/share_and_rate_this_app" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor" />

            <TextView
                android:id="@+id/share_app"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:gravity="center|start"
                android:padding="10dp"
                android:text="@string/tell_others_about_this_app" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>